--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vite-project",
+  "name": "tokentransferapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://sava12012.github.io/TokenTransferApp/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.4"
   },
   "devDependencies": {
