--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "web3": "^4.0.3",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
